# gentrade

./: .gitignore  IMPLEMENTATION-REPORT.md  README.md  pyproject.toml  setup.py
.github/commands/: commit-messages.md  pr-description.md
.github/devtask/: active.devtask.md  template.active.devtask.md
.github/instructions/: INDEX.md  config.instructions.md  copilot-instructions.md  deap-info.instructions.md  debugging-pitfalls.instructions.md  docstrings.instructions.md  evaluation-pipeline.instructions.md  gentrade.instructions.md  island-migration.instructions.md  mypy.instructions.md  pset-construction.instructions.md  python.instructions.md  testing.instructions.md  zigzag-feature.instructions.md
.github/prompts/: createAgentPrompt.prompt.md  createDevTask.prompt.md  planFeature.prompt.md  planFeature_command.prompt.md  review.prompt.md  update-docstrings.prompt.md
.github/prompts/active/: acc-coevolution.md  backtest-fitness-implementation-plan.md  implement-acc-coevolution.md  implement-algorithm-interface.md  implement-backtest-fitness.md  implement-island-migration.md  implement-multi-objective-fitness.md  implement-session-a-base-evaluator-and-tree_optimizer.md  implement-session-b-pair-tree-individual-optimizer.md  implement-session-c-pair-evaluator-and-metrics.md  implement-session-d-test-and-examples.md  implement-zigzag-smoke-mvp.md  island-migration.md  island_pull_architecture.md  pair-tree-optimizer-session-a.md  pair-tree-optimizer-session-c.md  pair-tree-optimizer-session-d.md  refactor-tree-evaluator.md  validation-set-support.md
docs/: sl_tp_backtester_notes.md
gentrade/: backtest_fitness.py  config.py  data.py  evolve.py  growtree.py  minimal_pset.py  tradetools.py
gentrade/optimizers/: __init__.py  cocoev.py  pair_strat.py  pairev.py  single_tree_strat.py
gentrade/pset/: pset_types.py  talib_primitives.py
gentrade/util/: algorithms.py  dataprovider.py  eval.py  eval_signals.cpp  growtree.py  metrics.py  misc.py  pset.py  pset_cache.py
op/: compile_cpp_module.sh
runners/: pres.html  runpairev.py
scripts/: compare_backtest_sltp.py  example_acc.py  example_classification_single_objective.py  example_cpp_backtest_single_objective.py  example_multi_objective.py  example_pair_optimizer.py  example_pair_optimizer_mo.py  example_pair_optimizer_mo_mig.py  example_tree_optimize_mig.py  run_multiobjective.py  run_real.py  run_real_class.py  run_real_class_mo.py  run_zigzag.py  smoke_zigzag.py  vbt_example.py
src/gentrade/: __init__.py  _defaults.py  acc.py  algo_handlers.py  algo_res.py  algorithms.py  backtest.py  backtest_fitness.py  backtest_metrics.py  callbacks.py  classification_fitness.py  classification_metrics.py  config.py  coop.py  data.py  eval_ind.py  eval_pop.py  eval_signals.cpp  eval_signals_sltp.cpp  eval_signals_sltp_2.cpp  eval_signals_sltp_3.cpp  evaluators.py  evolve.py  exceptions.py  growtree.py  individual.py  island.py  island_inoutbox.py  migration.py  minimal_pset.py  topologies.py  tradetools.py  types.py
src/gentrade/algorithms/: __init__.py  acc.py  base.py  coop.py  handlers.py  mpl.py  state.py
src/gentrade/optimizer/: __init__.py  acc.py  base.py  callbacks.py  coop.py  individual.py  pair.py  tree.py  types.py
src/gentrade/pset/: pset.py  pset_types.py  talib_primitives.py
stubs/deap/: base.pyi  gp.pyi  tools.pyi
tests/: conftest.py  test_acc_algorithm_unit.py  test_acc_e2e.py  test_acc_optimizer_integration.py  test_algorithm_interface.py  test_algorithm_lifecycle_handlers.py  test_backtest_fitness.py  test_backtest_metrics.py  test_config_propagation.py  test_coop_algorithm_unit.py  test_coop_optimizer_integration.py  test_dataprovider.py  test_ea_smoke.py  test_entry_exit_labels.py  test_evolution_smoke.py  test_exceptions.py  test_individual_evaluator.py  test_island_integration.py  test_island_lifecycle_handlers.py  test_island_unit.py  test_metrics.py  test_multiprocessing.py  test_optimizer_e2e.py  test_optimizer_integration.py  test_optimizer_unit.py  test_pair_evaluator.py  test_pair_individual.py  test_pair_optimizer.py  test_pair_optimizer_integration.py  test_pair_optimizer_unit.py  test_psetta.py  test_result_monitor.py  test_run_evolution_validation.py  test_smoke_zigzag.py
typings/deap/: __init__.pyi  algorithms.pyi  base.pyi  creator.pyi  gp.pyi  tools.pyi
typings/tables/: __init__.pyi
zigzag/: core.pyx
